testdata/golden/sema/invalid/contract_unknown_type_in_contract.sg
// scenario: contract references an unknown type in a member
contract UsesMissing {
    field value: MissingType;
}
